@@ -4,11 +4,13 @@ DIST parrot-6.7.0.tar.gz 4613520 SHA256 04b0ee976c61100af993f8830863ccfee9eada6b
 DIST parrot-6.8.0.tar.gz 4625363 SHA256 986a0e543e660e83595a3c477b7b7f065099edb559d74c56f61d88e216042f4e SHA512 f6bbb1576b2ea24379e4ec5778456754be41b01edf39c7b965124c195b16a7ac636f6000e168003310ded5eb420e16bb3881201a82a7d327fd0ff849ae7ca816 WHIRLPOOL 91bd7d1273a2ec8519ef63ee0d5b074e73d566c4f79f75dc4d13eb86574bf02b357ca364495441453c22463de930dcdcd78cdcf229b2281a5ea3ba8d02af39c3
 DIST parrot-6.9.0.tar.gz 4629472 SHA256 91ca66be5747b826374a91bb509c03c192e7a90f7742a279146a0a70639d5f9c SHA512 0308f98faafbd3cc0bfc50fdef004a169220da288a6180ba394a68b2c552e9a45f24d783ca45be1faebcad93466810e7abe16a95d81dec33c844c5ea9bb51c17 WHIRLPOOL 686020406e5c31234948320bcfbafa963423d80bcc0fde1fd893cd5dc622748f9923549c172c8ac780bcdb2f5a5fd30a2f1fb3010093164ea685e772158341f9
 DIST parrot-7.0.2.tar.gz 4697530 SHA256 1a8e9e203ad8ac92c89422603d1603fa821e957aa3a9ae57420c737d93c55213 SHA512 9fcd3d27c71a37841c81353aea3e393822358521e18f02644caa360de8d0f90b04c040839539769f0565c76fecc345a8c803c8e1b2cb0ec14675077a84cb4714 WHIRLPOOL e3f42c54c2c1dc422a7307e1f45689a81e27ffece6178e96067ae5a1ced168cf27849765249759d4fbc0b355151dc1d274dc97a8fb6a17cf9eece831415f2a71
+DIST parrot-7.1.0.tar.gz 4688341 SHA256 fe2cac1f5b811f36d6de7454ef1ff394ad66474f203813e5369b4dc68305964b SHA512 b7d261e82934aa84b3d93b2e68b3eb0f13dea684665ca2448a0e2139aa6676c1ff2da1a8056332a7f2538bee6158953be5bceed0ac8a9b277827ec7bcba46cb8 WHIRLPOOL 8083787f8779664e4ec7b3426b3e103dff9a22dfb18051e7617b6738b44156e1084f1691ce02e5869abba4d6455628c30631a9b5c86bc90779e6d2051e85d87b
 EBUILD parrot-6.10.0.ebuild 2451 SHA256 c99e974093ef055906da7194c0a686ba751b274f07b9a90f6ccc03db3fef5dea SHA512 afde07b68a3b1bb812d1a5b41efdd6372d9ae42f663d72b97874f84047171066e8a0583912ebf45c24e42df7cb79538c763acd98f8256abcabd901d9c52492cc WHIRLPOOL 5b8ef5580c4a3cfff480989ff8f8fc36bb61d0877a6e537554883d72bb5aa51eda38b2cddac25fd7da51c1cfd9eec21d0abe7ebd029dbe90ae3824ff301e91c5
 EBUILD parrot-6.11.0.ebuild 2468 SHA256 fc75bb81dd243174437d79ef200e21628ccdb784ebe5ece9bd4a4231b20bf1bc SHA512 75e737e3c2da364abfec861f4ed2a34bb4a5fd5e4ac82000f6260a060981e5492b45c3c4eca4b4379efbf0d6858f399aac60c43ade82b0eab78a16807ca2ef41 WHIRLPOOL a98645546f7f8772c27c29b392da99f2b381a5cb56bc78c7fddfcb9bda2171321a8debceb4e33f80a9c561717725339b52a01f57a3516ad36f1aeb0c9a45d8ee
 EBUILD parrot-6.7.0-r1.ebuild 2402 SHA256 00a0e29850e57bcc3b7bde22bcd6ff43c37589f31e2e886ab0a386814d8b6b9b SHA512 0f3f4a249160fe88155b1a02944ed6234955c15f738559e17e798a22ace29343262e1dab957b66cfa642068b63d8a8b4fbd9f01bdc19649021b45c3a8ec6a085 WHIRLPOOL 430e4b7503ad1959a7a8a44a58f4dfd61453376d4279ed49b829333c07717a41252a9de0098b7032db2013af7b9ce1a25cdd1b6a2d46c49ad098c096fc2aaf7d
 EBUILD parrot-6.8.0-r1.ebuild 2402 SHA256 8ada25897321a0744c2a41275a92f81555ab352a0c820b7762ee437ea54fdf15 SHA512 928b9d02b56995c877764a4889f950844e038cced6b4bcc18fb46b31ed96a810b8d768a36e14bf556fe42e66994f588909361f52ae317578852132f0e3d65d92 WHIRLPOOL 294ab08a00fca07db272d8d8eec76b6e08bacb0959f072ab5cf17a4e60e1fd97ca6888c75dc44a2f8a4d8c8d8b4dc184a5325a782624b39edc3ebbf11848e525
 EBUILD parrot-6.9.0.ebuild 2450 SHA256 bb2c28e98825362417be40d17500b86c3fab99dc55d6119099ff2d6b6870a9ad SHA512 3fa5cc9f44b6b9087792c9099c162ee2eba3e4ffbe7651d901639dddd0f61038cc21f96bdf23ae9a03628fa79e0192560bab8205eb73107f0e239b904ea0c42f WHIRLPOOL e2e193aefb2fafe2d0dc68e29328ddb5d3754b6c199d32849667c5e4b3eef53ac4c385a255ddc870a3b94acde78fa77a84700895b9aa8a9ba13f7000a62a640b
 EBUILD parrot-7.0.2.ebuild 2467 SHA256 a9d2a87511e0c1d04d276c1818e8eb5534c8215df1f1576a6f82fa2d0de73941 SHA512 b799ed17ba391a0f2c96cb9eb7535832174b90ff1307a69a112531d2d2d216c9e36b5af536f1ec3689da59e823475a07cb15b62d38b6b4f745b519dfe01c4175 WHIRLPOOL e81edfd6fda6a6f39e3a74f63d19efd5db17fd9882808175dbc46412e0085dddb6214d673b73797e4306d328a358807680ff80e2731c859c63ecaae006b823c9
-MISC ChangeLog 13066 SHA256 da18aa97e3027a2b785359b3cf55e7ca6c6d3366143eeabd0f4fcbd40eea64e0 SHA512 0da14bc9b5ad18332f8ae372f4761d575822c51ebd9866dacd496c0d5380f37052602fb0eab9e38b0f03b18a39d0447f4967b043d3f8132ec6bfd012ac927372 WHIRLPOOL 6ac59776b3f96a21038fd03289ec122e9c5a14f45391595d346684602c11cfdb0cef9754badc6caf9cee1ce0b26cab2d12314f42aad4f48062948ad4b93dc485
+EBUILD parrot-7.1.0.ebuild 2467 SHA256 9a848e6a2c728df40be2e827b77b3b124965ba71da9bfa144c212a11c844fa6a SHA512 33949f219d31c39465892622e2eefb240a234ad8840137f3f4b960f3a1773816af520ca873d380d41f8a809d4d0714a60c134ab53bca8ab6459066b251dd6585 WHIRLPOOL 0434c96ade7ddf724bda40a56a9c43b59ca6a9217cbe833e76562e901bda7ee283964a8cfd42e1ad9be566e0839d34daf613dd6803e1bf4b99d2a9429c90088e
+MISC ChangeLog 13175 SHA256 d593f123f273b8e1cc39d8dab96bde79bb3dc2ce49c06a937203e3404301d0a5 SHA512 f8bd901c4eb5d5139920922456175804bca2d3344c7a31e11323eefe22e084c84d06d407c825c002c5bd055223c48f4f115c16c59c70127524958a742f9a5a91 WHIRLPOOL 988ca482e5219821c08a290e11e875adb91a7bd744c9abbf0e70b1150db80f005c5544929a46a6b08e6ad015760b79b38bbc744b48af7ee58cbe87802a4e1e07
 MISC metadata.xml 157 SHA256 6a11fd41a2a210a9760849de398ef8c62cf46cc742d09b2e1781def7848fa1ec SHA512 95158d74d42674de03bc271c8dffa2264759c77681436de71fa9b3ad67f50b09394b0401e6df6dde526bc8dcd6ea666ed6767662bd63c3e92cb33b7b23e4ede8 WHIRLPOOL d3fdf14c384070120719ad4076cd04630790564f5bceda2a273e6481ea27a6fc6291e55d78cbf8bf99b73c7b42e8a1f286927c990702dceee97a63815cb33846
